data/derived/comb/progs/unify/prog2541.ml.out
Characters 11-22:
  eval (Sine (VarX,VarY), 0.2, 0.3);;
             ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
